--- a/chap3.tex
+++ b/chap3.tex
@@ -175,4 +175,4 @@ A big advantage of the \gls{SVR} is that it can take advantage of the so-called 
 
 Another regression method that can make use of the kernel trick is the Gaussian Process -- a method that doesn't just construct one function to fit the data, but rather a distribution of functions that all fit the data. The functions can effectively be averaged to create a \gls{GPR} or an uncertainty can be quantified by taking a standard deviation of this probability distribution. 
 
-A more general purpose model capable of learning functions of extremely high complexity is the \gls{NN}. This model, just like a linear regression, fits an intercept and coefficients to each input variable. Unlike the linear regression, the output of the first linear regression is the input of a 
+A more general purpose model capable of learning functions of extremely high complexity is the \gls{NN}. This model, just like a linear regression, fits an intercept and coefficients to each input variable. Unlike the linear regression, the output of the first linear regression is the input of a  ...
