--- a/chap6.tex
+++ b/chap6.tex
@@ -150,7 +150,7 @@ These three quantities were simultaneously varied with three different periods s
 \end{equation}
 which looks notably similar to \autoref{eq:obj_function_v2} if the logarithm of the \gls{CCD} electron counts $N_e$ replaces the conversion efficiency $\eta$. We attempted to perform a similar optimization task as explored in \autoref{ch:5}, but the electron data largely had signals at the same energy which can be seen in \autoref{fig:spectrum_gui}(D, E). This spectrum peaks around 0.7 or 0.8 MeV but can have a higher or lower number of counts based on the input parameters. We found (unsurprisingly) that the conditions with highest electron counts correspond to maximum main pulse intensity, minimum pre-pulse intensity, and close to peak focus. An example of this can be seen in \autoref{fig:optimization_gui}(F) which highlights the main pulse and pre-pulse optimal conditions with a blue star. For this run, 8.555 mm was the absolute position of the target when peak focus was achieved which matches the peak focus listed in the figure legend.
 
-Even though the electron spectra did not offer a lot of interesting physics to explore, we did successfully implement a feedback loop which sent the optimized main pulse, pre-pulse, and focus conditions back to motion controllers and waveplates in the lab via the \gls{EPICS} protocol. An example of this can be seen in \autoref{fig:beta_shift} where, during a second data collection, optimized parameters from the first run were sent via \gls{EPICS} to change the electron spectra in real-time. Each value of $\beta$ specified a slightly different set of input parameters that were tested for 30 seconds before moving on to the next value of $\beta$. We can see that the higher values of $\beta$ have maximum electron kinetic energy closer to 0.7 MeV in comparison to the higher values of $\beta$. Importantly, the python scripts automatically sent instructions 
+Even though the electron spectra did not offer a lot of interesting physics to explore, we did successfully implement a feedback loop which sent the optimized main pulse, pre-pulse, and focus conditions back to motion controllers and waveplates in the lab via the \gls{EPICS} protocol. An example of this can be seen in \autoref{fig:beta_shift} where, during a second data collection, optimized parameters from the first run were sent via \gls{EPICS} to change the electron spectra in real-time. Each value of $\beta$ specified a slightly different set of input parameters that were tested for 30 seconds before moving on to the next value of $\beta$. We can see that the higher values of $\beta$ have maximum electron kinetic energy closer to 0.7 MeV in comparison to the lower values of $\beta$ (with the notable exception $\beta=0$). Importantly, these steps were all taken automatically through the use of a Python script.
 
 \begin{figure}
 	\centering 
@@ -165,4 +165,4 @@ The chapter started by overviewing the experimental setup in \autoref{sec:lab_ba
 
 While this work is certainly important, it is still in early stages. We have the ability to collect proton spectra which can be more difficult to obtain but have more use for applications. However, the amount of proton data that we are able to get is usually minimal -- much of the explored parameter spaces end up with no proton signal. To make real progress, we would need to make improvements on the experimental side to obtain a more stable target that could more reliably generate MeV protons for a range of different input conditions.
 
-Furthermore, our current feedback loop involves fitting a relatively simple regression to the data -- something that is only possible when the size of the data is small (tens of thousands) and there are only a few different parameters. A more useful model that could feasibly handle larger and more complex datasets would be the \gls{NN} as evidenced by \autoref{sec:second_analysis}. Additionally, \gls{GPU}-accelerated computations would be necessary to operate this feedback loop in real-time. After obtaining several high-quality datasets scanning different parameters, we could pre-train the \gls{NN} so that when presented with a limited amount of new data from a different day, it could more quickly assess the ideal laser conditions. The work presented here represents an important first step in incorporating \gls{ML} methods to optimize \gls{TNSA} accelerated protons in real-time. 
+Furthermore, our current feedback loop involves fitting a relatively simple regression to the data -- something that is only possible when the size of the data is small (tens of thousands) and there are only a few different parameters. A more useful model that could feasibly handle larger and more complex datasets would be the \gls{NN} as evidenced by \autoref{sec:second_analysis}. Additionally, \gls{GPU}-accelerated computations would be necessary to operate this feedback loop in real-time. After obtaining several high-quality datasets scanning different parameters, we could pre-train the \gls{NN} so that when presented with a limited amount of new data from a different day, it could more quickly assess the ideal laser conditions. Nonetheless, the work presented here represents an important first step in incorporating \gls{ML} methods to optimize \gls{TNSA} accelerated protons in real-time. 
