--- a/motivation.bib
+++ b/motivation.bib
@@ -4,6 +4,18 @@
 	pages={1–50}
 }
 
+@article{Matuszak_2022_Onc,
+	title = {FLASH radiotherapy: an emerging approach in radiation therapy},
+	journal = {Reports of Practical Oncology and Radiotherapy},
+	volume = {27},
+	number = {2},
+	pages = {343 - 351},
+	year = {2022},
+	issn = {2083-4640},
+	url = {https://journals.viamedica.pl/rpor/article/view/RPOR.a2022.0038},
+	author = {Natalia Matuszak and Wiktoria Maria Suchorska and Piotr Milecki and Marta Kruszyna-Mochalska and Agnieszka Misiarz and Jacek Pracz and Julian Malicki}
+}
+
 @ARTICLE{Wolpert_1997_IEEE,
 	author={Wolpert, D.H. and Macready, W.G.},
 	journal={IEEE Transactions on Evolutionary Computation}, 
